[package]
name = "human-names"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["giraffekey <giraffekey@tutanota.com>"]
description = "A random generator for human first and last names"
repository = "https://github.com/giraffekey/human-names"
readme = "README.md"
categories = ["text-processing"]
keywords = ["text", "data", "random", "generation", "generator"]
exclude = ["data.csv"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
